-----------------------------------------

New config option to choose between libphpmailer or PEAR Mail.

The message_event cron script now runs the mail queue every time cron runs.

Now displays siblings on the student_view page.

New config option to declare registration periods for teaching
classes.

Tidied code for ldap_enrol.

Moved the absence email message out to the language array.


Version ClaSS-0.9.9 release (2009/11/16)
-----------------------------------------

The epfusername is now under sole control of the
generate_epfusername() function which is itself called from the
ldap_sync_users.php script. Uniqueness is now ensured within the wider scope
of the ldap directory.

Included parents as part of the ldap.

Simplified the eportfolio_accounts script - though it is still transitional!

Adopting the PEAR Mail_Queue library: this has taken over the
message_event table in the db (apply the patch to update it!).


Version ClaSS-0.9.8 release (2009/11/07)
-----------------------------------------

Fixed a typo in the ldap_sync_users which was affecting student uids.

Moodle course enrolments now pulled together into one script ldap_enrol_users.

Fixed the logic of generating columns for single stage assessments.

Implemented the nologin field for ldap_sync_users to delete a record.

Small fix to list_pastoral_groups which prevents a user's own formgroup
being hidden by other responsibilities.

Fixed a typo that had broken the email all class teachers option for
comments.

The fetch subject reports function can now filter out reportdefs which
do not apply to the student's cohorts. This avoids mutiple reports
where the scope of the report is smaller than the scope of the
assessments it is linked to.

Detect duplicate contacts on student data import using their email
address.


Version ClaSS-0.9.7 release (2009/10/22)
-----------------------------------------

Reworked the Register's setAll js function to allow it to preset