@@ -14,6 +14,8 @@ Tidied code for ldap_enrol.
 
 Moved the absence email message out to the language array.
 
+Added clickthrus to InfoBook from report_reports.
+
 
 Version ClaSS-0.9.9 release (2009/11/16)
 -----------------------------------------
